--- a/RxDialogPattern/.gitignore
+++ b/RxDialogPattern/.gitignore
@@ -1,8 +1,11 @@
+.gradle/
+local.properties
+gradle.properties
+.idea/*.xml
+.idea/.*
+.idea/*/*.xml
+!.idea/codeStyleSettings.xml
 *.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/build/*
 .DS_Store
-/build
-/captures
+captures/
