--- a/RealmTodoList/app/build.gradle
+++ b/RealmTodoList/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'realm-android'
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "24.0.0 rc1"
+  buildToolsVersion "24.0.0 rc2"
 
   defaultConfig {
-    applicationId "com.example.yatatsu.realmplayground"
-    minSdkVersion 16
+    applicationId "com.example.yatatsu.realmtodolist"
+    minSdkVersion 19
     targetSdkVersion 23
     versionCode 1
     versionName "1.0"
@@ -18,7 +18,9 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
-  dataBinding.enabled true
+  dataBinding {
+    enabled true
+  }
 }
 
 dependencies {
@@ -27,6 +29,7 @@ dependencies {
   compile 'com.android.support:support-v4:23.3.0'
   compile 'com.android.support:support-annotations:23.3.0'
   compile 'com.android.support:recyclerview-v7:23.3.0'
+  compile 'com.android.support:cardview-v7:23.3.0'
   compile 'com.jakewharton.timber:timber:4.1.1'
   compile 'io.reactivex:rxjava:1.1.2'
   compile 'io.reactivex:rxandroid:1.1.0'
